@@ -22,10 +22,11 @@ o would query_module() be faster ? do we care ?
 o investigate whether it would be better to have abb's linked component hash table
   - this would complicate the dumping code but reduce the output to the map buffer
 o use u16's not u32's for the map buffer
-o move out module_init()/exit() into a separate object file and compile the rest with -march ?
+o move out hw_ok() into a separate object file and compile the rest with -march ?
 
 WBNI
 ----
 
 o Other x86 processors, and maybe other archs.
 o gprof output from post-profiler
+o should have a full clean-out sysctl. is it possible ? 
